--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/blue"
+    android:orientation="vertical"
+    android:padding="@dimen/general_padding"
     tools:context=".MainActivity">
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="@dimen/title"
+        android:layout_marginTop="-2dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            android:backgroundTint="@color/white"
+            app:icon="@drawable/search_mode"
+            app:iconPadding="@dimen/icon_padding_main"
+            app:iconGravity="textStart"
+            app:iconTint="@color/black"
+            android:text="@string/search"
+            android:textColor="@color/black"
+            app:cornerRadius="@dimen/button_corner"/>
+
+        <Button
+            android:id="@+id/media_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            android:backgroundTint="@color/white"
+            app:icon="@drawable/media_mode"
+            app:iconPadding="@dimen/icon_padding_main"
+            app:iconGravity="textStart"
+            app:iconTint="@color/black"
+            android:text="@string/media"
+            android:textColor="@color/black"
+            app:cornerRadius="@dimen/button_corner"/>
+
+        <Button
+            android:id="@+id/settings_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            android:backgroundTint="@color/white"
+            app:icon="@drawable/settings_mode"
+            app:iconPadding="@dimen/icon_padding_main"
+            app:iconGravity="textStart"
+            app:iconTint="@color/black"
+            android:text="@string/settings"
+            android:textColor="@color/black"
+            app:cornerRadius="@dimen/button_corner"/>
+
+    </LinearLayout>
+</LinearLayout>
